# VectorRoute

./: .gitignore  .gitmodules  ARCHITECTURE_DIAGRAMS.txt  CODING_AND_TESTING_GUIDE.md  Ollama_Output_Structure.md  README.md  Structure_Plan.md  analyse_pds.py  chat.py  check_logs.py  chroma_setup.py  cl_batch.py  convert_db_pd.py  fetch_tool_docs.py  incremental_load_example.py  main.py  manage_cache.py  pyproject.toml  streamlit_app.py  sync_tools.py  test_incremental.py  tool_registry.py  vr_batch.py
agent/: agent.py  base_agent.py  batch_processor.py  clasical_agent.py  decomposer.py  executor.py  models.py  select_tool.py  select_top_k_tools.py  validation.py
embedding/: embedder.py  embedding.py  tool_embedder.py
embedding/similarity/: cosine.py  dot_product.py  manhattan.py
mcp_servers/finance/: capability.json
mcp_servers/weather/: capability.json
model/: embedding.py
refence_code/: main02.py  old_main.py
router/: embedder.py  filters.py  index.py  router.py
similarity/: euclidean.py  jaccard.py  minkowski.py
tool_utils/: tool_registry.py
tools/: db_connection.py  fetch_tool_docs.py  file_tracker.py  ollama_wrapper.py  tool_registry.py
tools/capabilities/: add_numbers.json
tools/capabilities/Search & Information Retrieval/: keyword_search.json  ranked_search.json  retrieve_document_by_id.json  search_documents_by_title.json  search_logs.json  search_metadata.json  search_recent_documents.json  semantic_search.json
tools/get_weather/: get_weather.py
utils/: chat.py  check_logs.py  convert_db_pd.py  streamlit_app.py
