[project]
name = "vectorroute"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "geopy>=2.4.1",
    "numpy>=2.4.2",
    "ollama>=0.6.1",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.5",
    "yfinance>=1.2.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
